fix note editor line wrapping strangeness.
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtWebApp/trunk@9178 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/main/resources/scss/_notes.scss
+++ b/src/main/resources/scss/_notes.scss
@@ -93,11 +93,13 @@
 				white-space: pre;
 				padding: 2px 0 0 0;
 				color: #757474;
-				font: italic 14px 'Droid Serif';
+				font: italic 14px 'Droid Serif' !important;
 				overflow: auto;
 				min-height: 50px;
 				margin-bottom: 46px;
 				max-height: 200px;
+				white-space: normal;
+				word-wrap: normal;
 
 				img.wb-thumbnail {
 					height: auto;
